<resources>
    <string name="app_name">AntrojiProgramavimoPraktika</string>

    <string name="RegisterUnderlined"><u>Register</u></string>
    <string name="LoginButton">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>

    <string name="Logout">Log out</string>
    <string name="Shop">Shop</string>
    <string name="ShoppingCart">Shopping cart</string>
    <string name="ManageItems">Manage items</string>

    <string name="RegisterButton">Register</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="CancelButton">Cancel</string>

    <string name="PriceRange">Price range</string>
    <string name="PriceMin">Min (€)</string>
    <string name="PriceMax">Max (€)</string>

    <string name="CheckoutButton">Check out</string>
</resources>
